--- a/Fetch_functional_practice/css/style.css
+++ b/Fetch_functional_practice/css/style.css
@@ -1,3 +1,9 @@
+#root {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .user-container {
   display: flex;
   flex-direction: column;
@@ -27,4 +33,24 @@
   border: 2px solid blue;
   border-radius: 15px;
   margin: 20px;
+}
+
+.message_text {
+  font-size: 50px;
+  font-weight: bold;
+  background-color: rgb(248, 82, 82);
+}
+
+button {
+  width: 50px;
+  height: 50px;
+  font-size: 20px;
+  cursor: pointer;
+  background-color: azure;
+}
+
+.number_id {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 0 5px 0 5px;
 }
