--- a/Lesson_16_22_02_DOM_slider/css/style.css
+++ b/Lesson_16_22_02_DOM_slider/css/style.css
@@ -96,3 +96,25 @@ body {
 .trigger button:hover {
   opacity: 1;
 }
+
+.rounds {
+  position: absolute;
+  display: flex;
+  bottom: 20px;
+  transform: translateX(-50%);
+  left: 50%;
+  gap: 15px;
+}
+
+.rounds button {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: bisque;
+  border: 2px solid black;
+  cursor: pointer;
+}
+
+.rounds .active {
+  background-color: orange;
+}
